--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,25 @@ body {
 }
 
 #container {
+    display: flex;
+    justify-content: center;
     height: 75vh;
     margin-top: calc(25vh / 2);
     width: 100%;
+}
+
+div {
+    margin: 0;
+}
+
+.logo {
+    background-color: #0f0;
+    width: 30vw;
+    height: 100%;
+}
+
+.form {
     background-color: #c0c0c0;
+    width: 70vw;
+    height: 100%;
 }
