--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: norse-bold;
+    src: url("Norse-Bold.otf");
+}
+
 body {
     background-color: #000;
     margin: 0;
@@ -20,6 +25,10 @@ div {
     background-image: url("leaf.avif");
     width: 30vw;
     height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .form {
@@ -44,4 +53,18 @@ div {
 
 .create {
     background-color: #f00;
+}
+
+.logo > p {
+    font-family: norse-bold;
+    color: #f9faf8;
+    font-size: 14px;
+}
+
+.logo > p > a {
+    color: #f9faf8;
+}
+
+.logo > p > a:hover {
+    color: #c0c0c0;
 }
