--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,7 @@ div {
     margin: 0;
 }
 
-.logo {
-    background-image: url("images/leaf.avif");
-    width: 30vw;
-    height: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
+/* Form Section */
 
 .form {
     background-color: #c0c0c0;
@@ -53,6 +45,18 @@ div {
 
 .create {
     background-color: #f00;
+}
+
+/* Logo Section */
+
+.logo {
+    background-image: url("images/leaf.avif");
+    width: 30vw;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .logo > p {
