Add styling to form inputs

--- a/styles.css
+++ b/styles.css
@@ -36,15 +36,44 @@ div {
     padding: 5% 5%;
 }
 
+/* Form Intro */
+
 .intro {
     background-color: #eee;
     font-weight: bold;
     font-size: 1.1rem;
+    position: relative;
+    z-index: 2;
 }
+
+/* Form Sign-Up */
 
 .sign-up {
     background-color: #f9faf8;
+    box-shadow: 0 2px 5px 5px #c0c0c0;
+    position: relative;
+    z-index: 1;
 }
+
+.form-inputs {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-inputs > div {
+    width: 40%;
+}
+
+label {
+    display: block;
+}
+
+legend {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+/* Form Create Account */
 
 .create {
     background-color: #eee;
@@ -60,6 +89,7 @@ div {
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    z-index: 2;
 }
 
 .logo > p {
